perbaikan migrasi prisma ke GORM
